# cancer-rnaseq-classifier

./: .gitignore  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
.streamlit/: config.toml
docs/: demo.md  experiment_log.md  external_validation_protocol.md  limitations.md  methodology_corrections.md  preprocessing_contract.md
examples/: demo_expected.json  demo_sample.csv
notebooks/: cancer_rnaseq_project.ipynb  model_comparison_demo.ipynb
requirements/: analysis.txt  model-runtime.txt
results/: dataset_summary.json  final_candidate.json  final_classification_report.json  final_confusion_matrix.csv  final_evaluation.json  final_test_predictions.csv  metrics.csv  mlp_fold_metrics.csv  mlp_summary.json  mlp_training_analysis.json  robustness_e10.json  split_summary.json  statistical_context.json
scripts/: analyze_dataset.py  build_comparison_notebook.py  build_project_assets.py  freeze_final_candidate.py  run_baselines.py  run_extended_experiments.py  run_feature_selection.py  run_final_evaluation.py  run_mlp_training_analysis.py  run_robustness_analysis.py  smoke_test_model.py  verify_artifacts.py
src/: app_services.py  artifact_verification.py  candidate_selection.py  config.py  data_loader.py  evaluation.py  experiments.py  feature_selection.py  final_evaluation.py  neural_evaluation.py  pca_experiments.py  random_forest_experiments.py  robustness.py  sklearn_pipelines.py  splitting.py  statistical_context.py  torch_mlp.py  validation.py  visualization.py
tests/: test_app_services.py  test_artifact_verification.py  test_candidate_selection.py  test_comparison_notebook.py  test_data_loader.py  test_evaluation.py  test_extended_experiments.py  test_feature_selection.py  test_final_evaluation.py  test_notebook.py  test_pca_experiments.py  test_random_forest.py  test_repository_artifacts.py  test_robustness.py  test_robustness_artifact.py  test_sklearn_pipelines.py  test_splitting.py  test_statistical_context.py  test_statistical_context_artifact.py  test_torch_mlp.py  test_training_analysis_artifacts.py  test_validation.py  test_visualization.py
