[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cancer-rnaseq-classifier"
version = "0.1.0"
description = "Классификация типов опухолей по данным RNA-Seq"
readme = "README.md"
authors = [{ name = "Старинская Светлана Романовна" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "joblib>=1.3",
    "matplotlib>=3.8",
    "numpy>=1.26,<2.5",
    "pandas>=2.1",
    "scikit-learn>=1.4,<2.0",
]

[project.optional-dependencies]
neural = [
    "torch>=2.3,<3.0",
]
notebook = [
    "ipykernel>=6.29,<8.0",
    "jupyterlab>=4.2,<5.0",
    "nbconvert>=7.16,<8.0",
]
app = [
    "altair>=5,<7",
    "streamlit>=1.40,<2.0",
]
model-runtime = [
    "joblib==1.5.3",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "scikit-learn==1.9.0",
]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
    "C4",
    "RUF",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["RUF001"]
"src/app_services.py" = ["RUF001"]
"notebooks/*.ipynb" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
